feat: add private documents and student profile
